--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "bootstrap-icons": "^1.3.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "draft-js": "^0.11.7",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.2",
     "morgan": "^1.10.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
